# omr-exam-grading

./: .gitignore  main.py  requirements-parity.txt
config/: circle_rois.json  handwritten_regions.json  id_bubble_fields.json  omr_bubble_grid_template.json  omr_bubble_thresholds.json  omr_thresholds.json  pipeline_outputs.debug_full.json  pipeline_outputs.json  pipeline_outputs.minimal.json  pipeline_outputs.review.json  region_windows.json  template_marker_layout.json
docs/: README.md  codebase-structure.md  config-reference.md  native-c-api.md  orm-be-downstream-contract.md  orm-native-implementation-plan.md  orm-native-readiness-checklist.md  orm-pipeline-guide.md  (+4 more)
native_core/: CMakeLists.txt  README.md  native_api.py  python_adapter.py  run_native_harness.py
native_core/examples/: minimal_usage.c
native_core/include/: omr_api.h
native_core/src/: idw_refine.cpp  idw_refine.h  marker_detect.cpp  marker_detect.h  omr_api.cpp  region_refine.cpp  region_refine.h  warp_global.cpp  warp_global.h
native_core/tests/: _bootstrap.py  adapter_contract_check.py  benchmark_raw_native_warp.py  compare_global_h_fitters.py  compare_native_python_markers.py  diagnose_region_windows.py  diagnose_remaining_question_mismatches.py  diagnose_warp_vs_grading.py  parity_grading.py  parity_orm_real_cases.py  parity_python_warp_native_grading.py  parity_python_warp_python_prep_native_grading.py  parity_real_images.py  parity_selection_modes_real_image.py  parity_with_python_markers.py  sweep_raw_native_warp_params.py  test_runner.cpp
native_core/tests/data/: orm_real_cases.json
(+25 files in other folders)
